--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,13 +1,17 @@
+<div class="search">
 <h2>New physician search</h2>
 <%= form_tag(method: "get") do %>
   <p>
   <%= label_tag(:address, "Search by patient address:") %>
   <%= text_field_tag(:address) %>
   </p>
+  <p class="form-or">
   OR
+  </p>
   <p>
   <%= label_tag(:zipcode, "zipcode:") %>
   <%= text_field_tag(:zipcode) %>
   </p>
-  <%= submit_tag("Search") %>
+  <%= submit_tag"Search", :class => "btn btn-primary" %>
 <% end %>
+</div>
