--- a/app/assets/stylesheets/searches.css
+++ b/app/assets/stylesheets/searches.css
@@ -1,7 +1,15 @@
 .form-or {
-  padding-left: 25%;
+  padding-left: 35%;
 }
 
 .search {
   width: 50%;
+}
+
+label {
+  width: 160px;
+}
+
+#zip-code-tag {
+  padding-left: 105px;
 }
