--- a/app/assets/stylesheets/doctors.css.scss
+++ b/app/assets/stylesheets/doctors.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Doctors controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+th, 
+td {
+  padding: 2px;
+}
+
+thead > tr {
+  border-bottom: 1px solid #000;
+}
+
+tr {
+  border-bottom: 1px solid #ccc;
+}
