--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -12,6 +12,10 @@
   <%= label_tag :zipcode, "zip code:", :id => "zip-code-tag" %>
   <%= text_field_tag :zipcode %>
   </p>
+  <p>
+  <%= label_tag :specialty, "Specialty (optional):"%>
+  <%= text_field_tag :specialty %>
+  </p>
   <%= submit_tag "Search", :class => "btn btn-primary" %>
 <% end %>
 </div>
