--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -27,7 +27,7 @@
         <td><%= doctor.state %></td>
         <td><%= doctor.zip %></td>
         <td><%= doctor.phone %></td>
-        <td><%= doctor.specialties.collect {|s| s.name}.join(", ") %></td>
+        <td><%= doctor.specialty_list %></td>
         <td><%= link_to 'Show', doctor %></td>
         <td><%= link_to 'Edit', edit_doctor_path(doctor) %></td>
         <td><%= link_to 'Destroy', doctor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
