Display message when no results are returned

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="navbar-collapse collapse navbar-inverse-collapse">
       <ul class="nav navbar-nav">
-        <li<%= ' class=active' if @active==:search %>><a href="<%= search_path %>">Search</a></li>
+        <li<%= ' class=active' if @active==:search %>><a href="<%= root_url %>">Search</a></li>
         <li<%= ' class=active' if @active==:list %>><a href="<%= doctors_path %>">List</a></li>
       </ul>
     </div>
