--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -5,11 +5,7 @@
     <tr>
       <th>First name</th>
       <th>Last name</th>
-      <th>Street</th>
-      <th>Unit</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Zip</th>
+      <th>Address</th>
       <th>Phone</th>
       <th>Specialty</th>
       <th colspan="3"></th>
@@ -21,11 +17,7 @@
       <tr>
         <td><%= doctor.first_name %></td>
         <td><%= doctor.last_name %></td>
-        <td><%= doctor.street %></td>
-        <td><%= doctor.unit %></td>
-        <td><%= doctor.city %></td>
-        <td><%= doctor.state %></td>
-        <td><%= doctor.zip %></td>
+        <td><%= doctor.full_address %></td>
         <td><%= doctor.phone %></td>
         <td><%= doctor.specialty_list %></td>
         <td><%= link_to 'Show', doctor %></td>
