Finish feature tests for search page

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,7 +11,7 @@
     <div class="navbar-collapse collapse navbar-inverse-collapse">
       <ul class="nav navbar-nav">
         <li<%= ' class=active' if @active==:search %>><a href="<%= root_url %>">Search</a></li>
-        <li<%= ' class=active' if @active==:list %>><a href="<%= doctors_path %>">List</a></li>
+        <li<%= ' class=active' if @active==:list %>><a href="<%= doctors_path %>">Doctor List</a></li>
       </ul>
     </div>
   </div>
